--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-loading": "^2.0.3"
+    "react-loading": "^2.0.3",
+    "uuid": "^9.0.1",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
