--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.0.18",
+    "@react-google-maps/api": "^2.19.2",
+    "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
     "next": "14.0.3",
     "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.3",
     "react-loading": "^2.0.3",
+    "use-places-autocomplete": "^4.0.1",
     "uuid": "^9.0.1",
     "uuidv4": "^6.2.13"
   },
